# TurtleBot4-Hospital-Logistics-Robot

./: README.md
autonomous_ws/src/autonomous_bot/: package.xml  setup.cfg  setup.py
autonomous_ws/src/autonomous_bot/autonomous_bot/: room_navigatorup.py
autonomous_ws/src/autonomous_bot/config/: nav2_params.yaml  room_poses.yaml
autonomous_ws/src/autonomous_bot/launch/: final_navigation.launch.py
autonomous_ws/src/autonomous_bot/maps/: hospital.pgm  hospital.yaml
autonomous_ws/src/autonomous_bot/rviz/: localization.rviz
autonomous_ws/src/autonomous_bot/scripts/: bridge_doors.sh
autonomous_ws/src/autonomous_bot/worlds/: hospital.sdf
