<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_bot</name>
  <version>0.1.0</version>
  <description>Navigation bringup package for autonomous_bot</description>
  <maintainer email="sylaraj@todo.todo">sylaraj</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Gazebo / Ignition -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-tk</exec_depend> 
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend><!-- for Tkinter UI -->




  <!-- Robot descriptions -->
  <exec_depend>turtlebot4_description</exec_depend>
  <exec_depend>turtlebot4_ignition_bringup</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Navigation -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
